--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,6 +6,47 @@
     (onListClassChange)="listClass = $event"
   ></c8y-list-display-switch>
 </c8y-action-bar-item>
+
+<c8y-action-bar-item>
+  <div class="input-group input-group-search m-t-4" id="search">
+    <input
+      class="form-control"
+      placeholder="Filter…"
+      type="search"
+      [ngModel]="searchText"
+      (ngModelChange)="searchText = $event"
+    />
+    <span class="input-group-addon">
+      <i c8yIcon="search" *ngIf="!searchText; else clearFilterString"></i>
+      <ng-template #clearFilterString>
+        <i class="text-muted" c8yIcon="times" (click)="searchText = ''"></i>
+      </ng-template>
+    </span>
+  </div>
+</c8y-action-bar-item>
+
+<c8y-action-bar-item>
+  <div class="c8y-select-wrapper">
+    <select [(ngModel)]="category" class="form-control">
+      <option [ngValue]="''">All</option>
+      <option *ngFor="let option of categoryOptions" [ngValue]="option">
+        {{ option }}
+      </option>
+    </select>
+  </div>
+</c8y-action-bar-item>
+
+<c8y-action-bar-item>
+  <div class="c8y-select-wrapper">
+    <select [(ngModel)]="trust" class="form-control">
+      <option [ngValue]="''">Any</option>
+      <option *ngFor="let option of trustOptions" [ngValue]="option">
+        {{ option }}
+      </option>
+    </select>
+  </div>
+</c8y-action-bar-item>
+
 <ng-template #loadingIndicator>
   <c8y-loading></c8y-loading>
 </ng-template>
@@ -17,7 +58,7 @@
 >
   <div
     class="col-sm-6 col-md-4 col-lg-4 col-xs-12"
-    *ngFor="let repo of repos"
+    *ngFor="let repo of repos | repoFilter : searchText : category : trust"
   >
     <div class="card">
       <!-- <div class="card-actions">
@@ -48,22 +89,18 @@
         </div>
       </div> -->
       <div class="card-header separator">
-        <div class="card-icon">
-          <i
-            class="c8y-icon-duocolor"
-            c8yIcon="c8y-simulator"
-          ></i>
-        </div>
+        <!-- <div class="card-icon">
+          <i class="c8y-icon-duocolor" c8yIcon="github"></i>
+        </div> -->
         <div class="d-flex flex-grow">
           <div class="flex-grow">
-            <!-- <p class="card-title">{{ repo.name }}</p> -->
-            <a
-              class="card-title"
-              target="_blank"
-              [href]="repo.url"
-            >
-              {{ repo.name }}
-            </a>
+            <p class="card-title">
+              <c8y-highlight
+                [text]="repo.name || ''"
+                [pattern]="searchText"
+                [shouldTrimPattern]="true"
+              ></c8y-highlight>
+            </p>
           </div>
 
           <a
@@ -73,11 +110,26 @@
             [routerLink]="installHrefForRepo"
           >
             Install
-        </a>
+          </a>
+
+          <a
+            class="btn btn-default btn-icon btn-sm"
+            target="_blank"
+            [href]="repo.url"
+            nofollow
+            noreferrer
+            ><i c8yIcon="github"></i
+          ></a>
         </div>
       </div>
       <div class="card-block card-column-30 m-r-0">
-        <p>{{ repo.desc }}</p>
+        <p>
+          <c8y-highlight
+            [text]="repo.desc || ''"
+            [pattern]="searchText"
+            [shouldTrimPattern]="true"
+          ></c8y-highlight>
+        </p>
       </div>
       <div class="card-footer separator card-column-30">
         <div class="d-flex fit-w">
@@ -90,7 +142,7 @@
           <div class="card-column-30">
             <span class="text-label-small m-r-4">
               <i c8yIcon="codefork"></i>
-              {{ repo.forks || '-' }}
+              {{ "-" }}
             </span>
           </div>
           <div class="card-column-30">
