--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,24 +26,111 @@
 </c8y-action-bar-item>
 
 <c8y-action-bar-item>
-  <div class="c8y-select-wrapper">
-    <select [(ngModel)]="category" class="form-control">
-      <option [ngValue]="''">All</option>
-      <option *ngFor="let option of categoryOptions" [ngValue]="option">
-        {{ option }}
-      </option>
-    </select>
+  <div
+    class="dropdown"
+    dropdown
+    #filtersDropdown="bs-dropdown"
+    [cdkTrapFocus]="filtersDropdown.isOpen"
+    [insideClick]="true"
+  >
+    <div class="input-group">
+      <div class="form-control">
+        <ng-container
+          *ngIf="
+            selectedCategories.length !== categoryOptions.length;
+            else allCategories
+          "
+        >
+          <span
+            class="tag tag--info chip"
+            *ngFor="let chip of selectedCategories"
+          >
+            <button
+              class="btn btn-xs btn-clean text-10"
+              title="{{ 'Remove' | translate }}"
+              type="button"
+              (click)="deselectCategory(chip); $event.stopPropagation()"
+            >
+              <i c8yIcon="times"></i>
+            </button>
+            {{ chip }}
+          </span>
+        </ng-container>
+        <ng-template #allCategories>
+          {{ "All categories" }}
+        </ng-template>
+      </div>
+      <div class="input-group-btn input-group-btn--last">
+        <button
+          class="btn-default btn btn--caret"
+          data-cy="c8y-alarm-filter"
+          dropdownToggle
+        >
+          <i class="caret"></i>
+        </button>
+      </div>
+    </div>
+    <ul class="dropdown-menu dropdown-menu-action-bar" *dropdownMenu>
+      <li
+        class="p-l-16 p-r-16 p-t-4 p-b-4 d-flex a-i-center sticky-top separator-bottom"
+      >
+        <label
+          class="c8y-checkbox d-flex a-i-center"
+          [title]="'All' | translate"
+        >
+          <input
+            type="checkbox"
+            data-cy="c8y-alarm-filter--all"
+            [ngModelOptions]="{ standalone: true }"
+            [ngModel]="selectedCategories.length === categoryOptions.length"
+            [indeterminate]="
+              selectedCategories.length > 0 &&
+              selectedCategories.length !== categoryOptions.length
+            "
+            (click)="toggleAllCategories()"
+          />
+          <span></span>
+          <span class="m-l-8">{{ "All" | translate }}</span>
+        </label>
+      </li>
+      <li
+        class="p-l-16 p-r-16 p-t-4 p-b-4 d-flex a-i-center"
+        *ngFor="let category of categoryOptions"
+      >
+        <label class="c8y-checkbox d-flex a-i-center" [title]="category">
+          <input
+            type="checkbox"
+            [attr.data-cy]="'c8y-alarm-filter--' + category"
+            [value]="category"
+            [checked]="selectedCategories.includes(category)"
+            (click)="toggleCategory(category)"
+          />
+          <span></span>
+          <span class="m-l-8">{{ category }}</span>
+        </label>
+      </li>
+    </ul>
   </div>
 </c8y-action-bar-item>
 
 <c8y-action-bar-item>
-  <div class="c8y-select-wrapper">
-    <select [(ngModel)]="trust" class="form-control">
-      <option [ngValue]="''">Any</option>
-      <option *ngFor="let option of trustOptions" [ngValue]="option">
-        {{ option }}
-      </option>
-    </select>
+  <div style="min-width: 150px">
+    <div class="c8y-switch-multistate">
+      <ng-container *ngFor="let item of trustOptions; index as i">
+        <input
+          [id]="'trust-level-' + i"
+          name="trust-level"
+          type="radio"
+          [attr.aria-label]="item.label"
+          [checked]="item.trustLevels === trust"
+          (click)="trust = item.trustLevels"
+        />
+        <label [title]="item.label" [for]="'trust-level-' + i"
+          ><i [class]="item.iconClass" [c8yIcon]="item.icon"></i
+        ></label>
+      </ng-container>
+      <div class="c8y-switch-multistate__handle"></div>
+    </div>
   </div>
 </c8y-action-bar-item>
 
@@ -58,48 +145,32 @@
 >
   <div
     class="col-sm-6 col-md-4 col-lg-4 col-xs-12"
-    *ngFor="let repo of repos | repoFilter : searchText : category : trust"
+    *ngFor="
+      let repo of repos | repoFilter : searchText : selectedCategories : trust
+    "
   >
     <div class="card">
-      <!-- <div class="card-actions">
-        <div class="dropdown" dropdown>
-          <button type="button" title="dropdown-toggle" dropdownToggle class="dropdown-toggle c8y-dropdown">
-            <i c8yIcon="ellipsis-v"></i>
-          </button>
-          <ul class="dropdown-menu dropdown-menu-right" *dropdownMenu>
-            <li>
-              <button title="Edit" type="button">
-                <i c8yIcon="edit"></i>
-                Edit
-              </button>
-            </li>
-            <li>
-              <button title="Duplicate" type="button">
-                <i c8yIcon="clone"></i>
-                Duplicate
-              </button>
-            </li>
-            <li>
-              <button title="Delete" type="button">
-                <i c8yIcon="delete"></i>
-                Delete
-              </button>
-            </li>
-          </ul>
-        </div>
-      </div> -->
       <div class="card-header separator">
-        <!-- <div class="card-icon">
-          <i class="c8y-icon-duocolor" c8yIcon="github"></i>
+        <!-- <div class="card-icon" [title]="repo.trust_level">
+          <ng-container [ngSwitch]="repo.trust_level">
+            <i [c8yIcon]="'c8y-shield'" *ngSwitchCase="'Trusted'"></i>
+            <i [c8yIcon]="'shield'" *ngSwitchCase="'Official'"></i>
+            <i [c8yIcon]="'warning-shield'" *ngSwitchCase="'Unofficial'"></i>
+          </ng-container>
         </div> -->
-        <div class="d-flex flex-grow">
+        <div class="d-flex flex-grow p-l-24">
           <div class="flex-grow">
             <p class="card-title">
-              <c8y-highlight
-                [text]="repo.name || ''"
-                [pattern]="searchText"
-                [shouldTrimPattern]="true"
-              ></c8y-highlight>
+              <ng-template #cardTitle>
+                <c8y-highlight
+                  [text]="repo.name || ''"
+                  [pattern]="searchText"
+                  [shouldTrimPattern]="true"
+                ></c8y-highlight>
+              </ng-template>
+              <s *ngIf="repo.archived; else cardTitle">
+                <ng-container [ngTemplateOutlet]="cardTitle"></ng-container>
+              </s>
             </p>
           </div>
 
@@ -123,6 +194,24 @@
         </div>
       </div>
       <div class="card-block card-column-30 m-r-0">
+        <button
+          class="card__ribbon btn-clean"
+          [tooltip]="repo.trust_level"
+          placement="bottom"
+          type="button"
+          [delay]="500"
+        >
+          <span
+            [ngClass]="{
+              'bg-info': repo.trust_level === 'Trusted',
+              'bg-primary': false,
+              'bg-success': repo.trust_level === 'Official',
+              'bg-warning': repo.trust_level === 'Unofficial'
+            }"
+          >
+            {{ repo.trust_level }}
+          </span>
+        </button>
         <p>
           <c8y-highlight
             [text]="repo.desc || ''"
@@ -142,7 +231,7 @@
           <div class="card-column-30">
             <span class="text-label-small m-r-4">
               <i c8yIcon="codefork"></i>
-              {{ "-" }}
+              {{ repo.forks || "-" }}
             </span>
           </div>
           <div class="card-column-30">
