sort categories alphabetically
Signed-off-by: Tristan Bastian <tristan.bastian@softwareag.com>

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -37,7 +37,7 @@
       <div class="form-control">
         <ng-container
           *ngIf="
-            selectedCategories.length !== categoryOptions.length;
+            selectedCategories.length && selectedCategories.length !== categoryOptions.length;
             else allCategories
           "
         >
